<resources>
    <string name="app_name">Note me</string>
    <string name="title_home">Home</string>
    <string name="title_secrets">Secrets</string>
    <string name="title_account">Account</string>
    <string name="login_signup">No account yet? Create one</string>
    <string name="register_button">Register</string>
    <string name="register_logo">Fill all fields</string>
    <string name="login_error_data">Fill all fields</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="account_exit">Exit account</string>
    <string name="account_username_change_error">You can\'t use your old username as a new</string>
    <string name="account_username_change_success">You have changed your username successfully!</string>
    <string name="account_username_change_exist">The username is already taken!</string>
    <string name="editor_edittext_header">Header</string>
    <string name="editor_edittext_content">Content</string>
    <string name="editor_done">Done</string>
    <string name="trash_empty">You have no trash</string>
    <string name="notes_empty">Start writing notes</string>
    <string name="trash_clear">Clear trash bin</string>
    <string name="secure_fingerprints_onetouch">One-touch sign in</string>
    <string name="secure_fingerprints_usepassword">Or use password</string>
    <string name="newpass_dialog_title_acc">Change Account Password</string>
    <string name="newpass_dialog_title_sec">Change Secrets Password</string>
    <string name="newpass_dialog_oldpass">Old password</string>
    <string name="newpass_dialog_newpass">New password</string>
    <string name="newpass_dialog_newpass_again">New password again</string>
</resources>
