<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchorGravity="bottom|center">

        <EditText
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/editor_edittext_header"
            android:inputType="textMultiLine"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/editor_edittext_content"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorAccent"
                fancy:fb_focusColor="@color/orange_theme"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/editor_done"
                fancy:fb_textColor="#FFFFFF" />

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:paddingTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_done"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/color_item" />


                </LinearLayout>


            </HorizontalScrollView>


        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
